snugom/tests/ui/id_on_option.stderr
error: #[snugom(id)] cannot be applied to an Option<T>
  --> tests/ui/id_on_option.rs:10:14
   |
10 |     #[snugom(id)]
   |              ^^
